potentially fixed contact page spacing for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,7 @@
     margin-top: 25px;
     margin-left: 5rem;
     margin-right: 5rem;
+    align-content: center;
   }
   .contact-content-con .left-contact {
     flex: 2;
@@ -523,14 +524,19 @@
   .contact-content-con .left-contact p {
     margin: 1rem 0;
     line-height: 2rem;
+    align-content: center;
   }
   .contact-content-con .left-contact .contact-info .contact-item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    margin-left: 3rem;
+    margin-right: 3rem;
   }
   .contact-content-con .left-contact .contact-info .contact-item p {
     margin: 0.3rem 0 !important;
+    margin-left: 3rem;
+    margin-right: 3rem;
     padding: 0 !important;
   }
   .contact-content-con .left-contact .contact-info .contact-item .icon {
